# RAG-PROJECT

./: .dockerignore  .gitignore  Dockerfile  LICENSE  docker-compose.yml  prometheus.yml  pyproject.toml  readme.md  requirements.txt  reset_chroma.py  reset_vector_store.py  test_pgvector.py  test_pgvector_insert.py  test_pgvector_search.py  test_qdrant.py  test_qdrant_insert.py
.github/workflows/: ci.yml
app/: chunker.py  confidence.py  config.py  context_builder.py  ingest.py  metadata_filter.py  observability.py  query.py  question_rewriter.py  reranker.py  section_extractor.py
app/api/: main.py  prometheus_metrics.py  schemas.py  state.py
app/embeddings/: openai_embeddings.py
app/loaders/: docx_loader.py  image_loader.py  pdf_loader.py
app/retrieval/: bm25_search.py  hybrid_search.py  keyword_search.py  parent_child.py  parent_retrieval.py
app/settings/: retrieval_settings.py
app/vectorstore/: chroma_store.py  opensearch_store.py  pgvector_store.py  qdrant_store.py  store.py
benchmarks/: benchmark_runner.py  dashboard_data.py  history.py  run.py  run_single.py
dashboard/: app.py
data/raw/: rag_exemplo.docx  rag_exemplo_maior.docx
docs/: vector-store-benchmark.md
grafana/dashboards/: rag-observability.json
tests/: evaluate.py  inspect_sections.py  metrics.py  test_cases.py
tests/integration/: test_chroma.py  test_image_loader.py  test_pdf_loader.py
tests/manual/: check_pgvector_search.py  check_qdrant_search.py
tests/unit/: chunker_test.py  test_chroma.py  test_chunker.py  test_docx_loader.py  test_embedding.py  test_openai_conection.py
(+3 files in other folders)
